# epic-awesome-gamer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PUSHPLUS.py  README.md  _token  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: README.md
.github/workflows/: README.md  SourceGit.yaml  SourceGit.yml  assert_2FA.yaml  ci_docker.yaml  ci_docker_dev.yaml  ci_docker_fish.yaml  epic-gamer.yml  main.yml  scaffold_claim.yaml  scaffold_get.yaml  scaffold_test.yaml  two_factor_challenge.yaml
.github/workflows/samples/: actions_container.yaml  compose.yaml  container.yaml  docker-compose.yaml  source_code.yaml
app/: deploy.py  epic_agent.py  epic_games.py  jobs.py  models.py  run_once.py  settings.py  utils.py
app/cli/: main.py
app/epic_awesome_gamer/: epic_agent.py  epic_games.py  models.py  settings.py
app/epic_awesome_gamer/cli/: main.py
app/epic_awesome_gamer/helper/: get_promotions.py
app/extensions/: __init__.py  ext_celery.py
app/helper/: __init__.py  env_generator.py  get_promotions.py
app/jobs/: __init__.py  add_week_free_games_to_cart.py  collect_week_free_games.py
app/schedule/: collect_epic_games_task.py
app/services/: __init__.py  epic_agent_service.py  epic_authorization_service.py  epic_games_service.py
docker/: .env.example  Dockerfile  docker-compose.yaml  publish.sh  start.sh
docs/: 404.html  CNAME  book.min.31cccedbc2b6812eb37d0d37cdf4cb30cb89bd41421d3d51da624e11baccfe92.css  en.search-data.min.e5fd334fa4de987527828babef219174577095bb905b3fe9e4535411ab2aa666.json  en.search.min.29376e9f40a2395f81355c89199d51cebfa619adc77d7a286e33659b38c14e2e.js  index.html  index.xml  manifest.json  sitemap.xml  sw.min.fce957f404884887d3e2471bff9b46e9879d096ba64fd4ac8f550d0dd48d105a.js  zh.search-data.min.226b5dba443e6f46b077ba1fddfb4715fb89f48a8eba44ef532cd06e104661b7.json  zh.search-data.min.410c1783fd40cf638c02f234b0844a39a3e0479e84d5815f9b84068ffce4e35e.json  zh.search-data.min.54cb0d59349390072a5f0d95dca1490b19b013445d0ce6b2c7481e7ff7930b4f.json  zh.search-data.min.91234a000b9e670882a6ffb86ee064b363d2e90b2af61423609691833689ea02.json  zh.search-data.min.a79a513ee11c68b063bf9de1a8b33e071d3d0df1fccf70727832c237ddac6e8b.json  zh.search-data.min.d6416e2d177969057d2137384f2df4a59f508c5d1546003af77f641ae06dbb19.json  zh.search.min.3200a7873d634aca2aaa251a5d54c95826bebddd7711953b981ad182f5d44509.js  zh.search.min.37bd0acc34a0592786870ee114abc900e147d33f33ad53fa82ad3f1b97eff5da.js  zh.search.min.a15fd101d60a5e675e4c679fb6cee2a03a5cec8ad6aaf5a007d80e995b60c1f7.js  zh.search.min.a63ca1af0ed4ca02a8893b847a8e5fac23b666c968c57f0406a9bfae5bbb4301.js  zh.search.min.dc3a34b2af8f7beecf13a7a628bcfaab491c14d802614fe5689f7aa1e68a5ea0.js  zh.search.min.fc878e53db47d3fdaac71749a5ca9d16ec94eebd669537a8e04a94d96741bb4a.js
docs/categories/: index.html  index.xml
docs/categories/Development/: index.html  index.xml
docs/categories/golang/: index.html  index.xml
docs/en/: index.html  sitemap.xml
docs/posts/: index.html  index.xml
docs/posts/creating-a-new-theme/: index.html
docs/posts/goisforlovers/: index.html
docs/posts/hugoisforlovers/: index.html
docs/posts/migrate-from-jekyll/: index.html
docs/tags/: index.html  index.xml
docs/tags/development/: index.html  index.xml
docs/tags/go/: index.html  index.xml
docs/tags/golang/: index.html  index.xml
docs/tags/hugo/: index.html  index.xml
docs/tags/themes/: index.html  (+1 more)
docs/zh/: 404.html  index.html  index.xml  sitemap.xml
examples/: .env.example  add_week_free_games_to_cart.py  collect_week_free_games.py  demo_epic_games_collector.py  invoke_jobs.py
scripts/: generate_commit_message.py
src/: action.py  claim.py  config-sample.yaml  config.py  get.py  main.py  settings.py  utils.py
src/epic_awesome_gamer/: __init__.py  claim.py  collector.py  epic_games.py  types.py
src/epic_games/: __init__.py  agent.py  player.py
src/middleware/: __init__.py  epic_search_store_query.py
src/services/: __init__.py  deploy.py  get.py  models.py  pusher.py  scaffold.py  settings.py  solver.py
src/utils/: __init__.py  common.py  pusher.py  solver.py  toolbox.py
tests/: test_helper_env_generator.py
(+135 files in other folders)
